--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "rawline-studio",
   "private": true,
@@ -12,7 +13,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.0",
-    "@google/genai": "^1.34.0"
+    "@google/genai": "^1.34.0",
+    "firebase": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
