--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "rawline-studio",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,7 +14,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.0",
     "@google/genai": "^1.34.0",
-    "firebase": "^11.1.0"
+    "firebase": "^11.1.0",
+    "framer-motion": "^11.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
